style: 使用 prettier 格式化代码

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "dependencies": {
         "@larksuiteoapi/node-sdk": "^1.30.0",
         "dotenv": "^16.4.5"
+    },
+    "devDependencies": {
+        "prettier": "^3.3.3"
     }
 }
